# Dastardly-Dungeon-Dwellers

./: .clang-format  .clang-tidy  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .gitmodules  Art.cpp  Art.h  CMakeLists.txt  CMakePresets.json  Character Stats.cfg  Character Stats.txt  Dastardly Dungeon Dwellers.cfg  Dastardly Dungeon Dwellers.cpp  Dastardly Dungeon Dwellers.drawio  Dastardly Dungeon Dwellers.h  Enemy.cpp  Enemy.h  LICENSE  Progression.cpp  Progression.h  README.md  run.sh
.devcontainer/: .dockerignore  Dockerfile  Dockerfile.alp  Dockerfile.arch  Dockerfile.ddd  Dockerfile.deb  Dockerfile.desktop  Dockerfile.dev  Dockerfile.prod  devcontainer.json
.github/workflows/: build.yml  docker-publish.yml  release.yml
.github/workflows/scripts/: run.sh
Docs/: Notes.txt
app/desktop/: index.html  package.json
app/desktop/src/: main.tsx
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/src/: main.rs
app/docs/: app.md  desktop.md  web.md
app/res/: ddd.rc
app/web/: crt.html  package-lock.json
app/web/src/: colors.ts  config.ts  dom.ts  effectControls.ts  lib.tsx  main-legacy.tsx  main.tsx  xterm.ts
app/web/src/components/: ColorPicker.tsx  EffectSlider.tsx
app/web/src/effects/: bloom.ts  defs.ts  noise.ts
docs/: Test.h
include/: Art.h  Battle Controller.h  BattleController.h  CMakeLists.txt  Game.h  Globals.h  Main Menu.h  Map Generator.h  Map.h  Validation.h
include/Art/: BattleArt.h  BoxArt.h  CharacterArt.h  DialogueArt.h  GameArt.h  RoomArt.h  TutorialArt.h
include/Battle Controller/: Battle Controller.h  Enemy Resistance.h
include/Battle Controller/Enemy/: Enemy.h
include/Enemy/: Boss.h  Enemy Spawner.h  Enemy.h  EnemySpawner.h  Loot.h  Troll.h
include/Enemy/Enemies/: Boss.h  Cyclops.h  Enemy.h  Goblin.h  Minotaur.h  Orc.h  Skeleton.h  Troll.h
include/Player/: Character List.h  CharacterList.h  Characters.h  Inventory.h  Player.h  Skills.h
include/Player/Characters/: Archer.h  Bard.h  Character.h  Mage.h  Warrior.h
include/Room Controller/: Room Controller.h  Room Enemy.h  Room Exit.h  Room Loot.h  Room Merchant.h  RoomController.h  RoomExit.h  RoomLoot.h  RoomMerchant.h
include/RoomController/: RoomController.h  RoomEnemy.h  RoomExit.h  RoomLoot.h  RoomMerchant.h
res/: DDD.rc  compile.bat  crt-inject.html  crt.html  index.html
res/crt/: package.json  tsconfig.json
res/crt/src/: apply.ts  main.tsx  profiles.ts  state.ts  webgl-patch.ts
res/crt/src/components/: Menu.tsx  ProfileSelector.tsx
res/crt/src/effects/: bloom.ts  curve.ts  jitter.ts
src/: Art.cpp  Battle Controller.cpp  BattleController.cpp  CMakeLists.txt  Dastardly Dungeon Dwellers.cpp  DastardlyDungeonDwellers.cpp  Game.cpp  Globals.h  Main Menu.cpp  Main Menu.h  Map Generator.cpp  Map Generator.h  Map.cpp  Map.h  Progression.cpp  Validation.cpp  Validation.h  ddd.cpp
src/Art/: BattleArt.cpp  BoxArt.cpp  CharacterArt.cpp  DialogueArt.cpp  GameArt.cpp  RoomArt.cpp  TutorialArt.cpp
src/Battle Controller/: Battle Controller.cpp  Battle Controller.h  Enemy Damage.cpp  Enemy Damage.h  Enemy Resistance.cpp  Enemy Resistance.h  Enemy Spawner.cpp  Enemy Spawner.h  Enemy Spwaner.cpp  Player Damage.cpp  Player Damage.h
src/Enemy/: Boss.cpp  Boss.h  Enemy Spawner.cpp  Enemy.cpp  EnemySpawner.cpp  Loot.cpp  Troll.cpp  Troll.h
src/Enemy/Enemies/: Boss.cpp  Cyclops.cpp  Enemy.cpp  Goblin.cpp  Minotaur.cpp  Orc.cpp  Skeleton.cpp  Troll.cpp
src/Player/: Character List.cpp  CharacterList.cpp  Characters.cpp  Inventory.cpp  Player.cpp  Player.h  Skills.cpp  Skills.h  Upgrade.cpp  Upgrade.h
src/Player/Characters/: Archer.cpp  Bard.cpp  Character.cpp  Mage.cpp  Warrior.cpp
src/Room Controller/: Room Controller.cpp  Room Controller.h  Room Enemy.cpp  Room Enemy.h  Room Exit.cpp  Room Exit.h  Room Loot.cpp  Room Loot.h  Room Merchant.cpp  Room Merchant.h  RoomController.cpp  RoomEnemy.cpp
src/RoomController/: RoomController.cpp  RoomEnemy.cpp  RoomExit.cpp  RoomLoot.cpp  RoomMerchant.cpp
